[project]
name = "argos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async>=0.6.2",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "framatome>=2025.3",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "nicegui>=3.7.1",
    "openai>=2.18.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "truststore>=0.10.4",
]
